# tailwind-class-prefixer

./: .gitignore  LICENSE.md  README.md  prefix.code-workspace  prefix.py  pyproject.toml
application/: __init__.py  app.py
application/config/: __init__.py  base.py  logs.py
application/exceptions/: __init__.py
application/inout/: __init__.py  buffer.py  json.py
application/parser/: css.py  html.py  js.py  prefix.py  tailwind.py  vue.py  walk.py
application/tests/: conftest.py  test_cli.py
application/tests/mocks/: check.vue  mediaQuery.vue  tailwind.config.js  test.css  test.vue
application/update/: repository.py
